# AdventOfCode

./: .gitignore  README.md  aoc.opam  dune-project  helpers.py  package-lock.json  package.json  pyproject.toml  pytest.ini  test_all.py  tsconfig.json
Day 1 — Chronal Calibration/: README.md  part_1.py  part_2.py
Day 2 — Inventory Management System/: README.md  part_1.py  part_2.py
Day 3 — No Matter How You Slice It/: README.md  part_1.py  part_1_memory_efficient.py  part_2.py
Day 4 — Repose Record/: part_1.py  part_2.py
Day 5 — Alchemical Reduction/: part_1.py  part_2.py
Day 6/: part_1.py  part_2.py
Day 7/: part_1.py
Day 8/: part_1.py
day_1/: task_1.py  task_2.py
day_2/: task_1.py  task_2.py
day_3/: task_1.py  task_2.py
day_4/: task_1.py  task_2.py
day_5/: task_1.py  task_2.py
day_6/: task_1.py  task_2.py
day_7/: task_1.py  task_2.py
day_8/: image.pbm  task_1.py  task_2.py
day_9/: task_1.py  task_2.py
days/: day_10_1.py  day_11_1.py  day_11_2.py  day_12_1.py  day_13_1.py  day_13_2.py  day_14_1.py  day_16_1.py  day_1_1.py  day_1_2.py  day_2_1.py  day_2_2.py  day_3_1.py  day_3_2.py  day_4_1.py  day_4_2.py  day_5_1.py  day_5_2.py  day_6_1.py  day_6_2.py  day_7_1.py  day_7_2.py  day_8_1.py  day_8_2.py  day_9_1.py  day_9_2.py
days/day1/: dune  main.ml
days/day10/: dune  main.ml
days/day2/: dune  main.ml
days/day3/: dune  main.ml
days/day4/: dune  main.ml
days/day5/: dune  main.ml
days/day6/: dune  main.ml
days/day7/: dune  main.ml
days/day8/: dune  main.ml
src/: utils.ts
tests/: test_day_1.py  test_day_2.py
(+57 files in other folders)
